# reactor-verification-benchmarks

./: README.md
features/A_B/: A_B.lf
features/ActionPresence/: ActionPresence.lf
features/Barrier/: barrier.lf
features/Connection/: Connection.lf
features/MultiProperties/: MultiProperties.lf
features/Outer2Inner/: Outer2Inner.lf
features/Outer2Inner/src-gen/Outer2Inner/: CMakeLists.txt  Outer2Inner.c
features/Outer2Inner/src-gen/Outer2Inner/model/: property_test.ucl
features/Outer2Inner/src-gen/Outer2Inner/model/smt/: output-property_consecution_test-v-0002.smt  output-property_initiation_test-v-0001.smt
features/Parsing/ParsingComp/: ParsingComp.lf
features/Parsing/ParsingLTL/: ParsingLTL.lf
features/Parsing/ParsingRef/: ParsingRef.lf
features/PortPresence/: PortPresence.lf
features/SelfTrigger/: SelfTrigger.lf
features/SimpleReactor/: SimpleReactor.lf
features/Timer/: Timer.lf
features/TwoFeedback/: TwoDistinctFeedback.lf  TwoFeedback.lf
native/: AddOne.lf  Alarm.lf  simultaneity.lf
native/Alarm/: Alarm.lf
native/Connection/: Connection.lf
native/Machine/: Machine.lf  PhysicalPlant.lf
native/Simultaneity/: Simultaneity.lf
native/Timer/: Timer.lf
native/src-gen/AddOne/: AddOne.c  CMakeLists.txt
native/src-gen/Alarm/: Alarm.c  CMakeLists.txt
native/src-gen/simultaneity/: CMakeLists.txt  simultaneity.c
native/src-gen/timing/: CMakeLists.txt  timing.c
soter/mini_pipe/: pipe.lf
soter/pipe/: pipe.lf
soter/pipe/long_pipe/: pipe.lf
soter/safe_send/: safe_send.lf
soter/unsafe_send/: unsafe_send.lf
(+199 files in other folders)
